--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,43 +1,69 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>슬리액</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            overflow: initial !important;
+        }
+        body {
+            font-size: 15px;
+            line-height: 1.46668;
+            font-weight: 400;
+            font-variant-ligatures: common-ligatures;
+            -moz-osx-font-smoothing: grayscale;
+            -webkit-font-smoothing: antialiased;
+        }
+        * {
+            box-sizing: border-box;
+        }
+    </style>
+    <link rel="stylesheet" href="https://a.slack-edge.com/bv1-9/client-boot-styles.dc0a11f.css?cacheKey=gantry-1613184053" crossorigin="anonymous" />
+    <link rel="shortcut icon" href="https://a.slack-edge.com/cebaa/img/ico/favicon.ico" />
+    <link href="https://a.slack-edge.com/bv1-9/slack-icons-v2-16ca3a7.woff2" rel="preload" as="font" crossorigin="anonymous" />
+    <link
+      href="https://a.slack-edge.com/bv1-10/client-boot-styles.82a58f4.min.css?cacheKey=gantry-1674776250"
+      rel="stylesheet"
+      type="text/css"
+      onload="window._cdn ? _cdn.ok(this, arguments) : null"
+      onerror="window._cdn ? _cdn.failed(this, arguments) : null"
+      crossorigin="anonymous"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link
+      href="https://a.slack-edge.com/bv1-10/slack-kit-styles.b2b0c56.min.css?cacheKey=gantry-1674776250"
+      rel="stylesheet"
+      type="text/css"
+      onload="window._cdn ? _cdn.ok(this, arguments) : null"
+      onerror="window._cdn ? _cdn.failed(this, arguments) : null"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://a.slack-edge.com/bv1-10/helper-styles.584fce9.min.css?cacheKey=gantry-1674776250"
+      rel="stylesheet"
+      id="slack_kit_helpers"
+      type="text/css"
+      onload="window._cdn ? _cdn.ok(this, arguments) : null"
+      onerror="window._cdn ? _cdn.failed(this, arguments) : null"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+  <script src="/dist/app.js"></script>
   </body>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3PMN5NZMP6');
+  </script>
+  <script>
+    window.gtag('event', 'page_view', { page_path: location.pathname });
+  </script>
 </html>
